Stop using deprecated URL constructors in EEDefinitionTests
Constants are being passed to it thus it's safe to switch to URI.